--- a/Components/Pages/MapPage.razor
+++ b/Components/Pages/MapPage.razor
@@ -80,6 +80,7 @@
     </div>
 </ul>
 
+<label for="level">Floor:</label>
 <select id="level">
     <option value="1">1</option>
     <option value="2">2</option>
