--- a/Components/Pages/PathMapTable.razor
+++ b/Components/Pages/PathMapTable.razor
@@ -294,7 +294,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit User</h5>
+                    <h5 class="modal-title">Edit Path</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="CloseModal"></button>
                 </div>
                 <div class="modal-body">
